--- a/src/core/styles/base/animations/entrances/_swirl.scss
+++ b/src/core/styles/base/animations/entrances/_swirl.scss
@@ -1,9 +1,10 @@
-/**
- * ----------------------------------------
- * animation swirl-in-fwd
- * ----------------------------------------
- */
+////
+/// @group animations
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
 
+/// @requires {mixin} keyframes
 @mixin swirl-in-fwd {
     @include keyframes(swirl-in-fwd) {
         0% {
@@ -18,13 +19,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-right-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-right-fwd {
     @include keyframes(swirl-in-right-fwd) {
         0% {
@@ -41,13 +36,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-bl-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-bl-fwd {
     @include keyframes(swirl-in-bl-fwd) {
         0% {
@@ -64,13 +53,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-bck {
     @include keyframes(swirl-in-bck) {
         0% {
@@ -85,13 +68,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-right-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-right-bck {
     @include keyframes(swirl-in-right-bck) {
         0% {
@@ -108,13 +85,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-bl-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-bl-bck {
     @include keyframes(swirl-in-bl-bck) {
         0% {
@@ -131,13 +102,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-top-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-top-fwd {
     @include keyframes(swirl-in-top-fwd) {
         0% {
@@ -154,13 +119,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-br-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-br-fwd {
     @include keyframes(swirl-in-br-fwd) {
         0% {
@@ -177,13 +136,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-left-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-left-fwd {
     @include keyframes(swirl-in-left-fwd) {
         0% {
@@ -200,13 +153,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-top-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-top-bck {
     @include keyframes(swirl-in-top-bck) {
         0% {
@@ -223,13 +170,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-br-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-br-bck {
     @include keyframes(swirl-in-br-bck) {
         0% {
@@ -246,13 +187,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-left-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-left-bck {
     @include keyframes(swirl-in-left-bck) {
         0% {
@@ -269,13 +204,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-tr-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-tr-fwd {
     @include keyframes(swirl-in-tr-fwd) {
         0% {
@@ -292,13 +221,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-bottom-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-bottom-fwd {
     @include keyframes(swirl-in-bottom-fwd) {
         0% {
@@ -315,13 +238,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-tl-fwd
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-tl-fwd {
     @include keyframes(swirl-in-tl-fwd) {
         0% {
@@ -338,13 +255,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-tr-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-tr-bck {
     @include keyframes(swirl-in-tr-bck) {
         0% {
@@ -361,13 +272,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-bottom-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-bottom-bck {
     @include keyframes(swirl-in-bottom-bck) {
         0% {
@@ -384,13 +289,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation swirl-in-tl-bck
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin swirl-in-tl-bck {
     @include keyframes(swirl-in-tl-bck) {
         0% {
