--- a/src/core/styles/components/date-picker/_date-picker-component.scss
+++ b/src/core/styles/components/date-picker/_date-picker-component.scss
@@ -1,4 +1,14 @@
+//// Date Picker
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-date-picker) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     .igx-dialog__window {
         @extend %date-picker-display !optional;
     }
