--- a/src/core/styles/components/dialog/_dialog-component.scss
+++ b/src/core/styles/components/dialog/_dialog-component.scss
@@ -1,4 +1,14 @@
+//// Dialog
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-dialog) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %igx-dialog-display !optional;
     @include e(window) {
         @extend %igx-dialog-window !optional;
