--- a/src/core/styles/components/paginator/paginator-component.scss
+++ b/src/core/styles/components/paginator/paginator-component.scss
@@ -1,3 +1,7 @@
+//// Paginator
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
 %paginator-display {
     display: flex;
     justify-content: center;
@@ -6,5 +10,8 @@
 }
 
 @include b(igx-paginator) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %paginator-display !optional;
 }
