--- a/src/core/styles/base/animations/entrances/_roll.scss
+++ b/src/core/styles/base/animations/entrances/_roll.scss
@@ -1,9 +1,10 @@
-/**
- * ----------------------------------------
- * animation roll-in-left
- * ----------------------------------------
- */
+////
+/// @group animations
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
 
+/// @requires {mixin} keyframes
 @mixin roll-in-left {
     @include keyframes(roll-in-left) {
         0% {
@@ -18,13 +19,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation roll-in-top
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin roll-in-top {
     @include keyframes(roll-in-top) {
         0% {
@@ -39,13 +34,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation roll-in-right
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin roll-in-right {
     @include keyframes(roll-in-right) {
         0% {
@@ -60,13 +49,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation roll-in-bottom
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin roll-in-bottom {
     @include keyframes(roll-in-bottom) {
         0% {
