--- a/src/core/styles/base/animations/exits/_slit.scss
+++ b/src/core/styles/base/animations/exits/_slit.scss
@@ -1,9 +1,10 @@
-/**
- * ----------------------------------------
- * animation slit-out-vertical
- * ----------------------------------------
- */
+////
+/// @group animations
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
 
+/// @requires {mixin} keyframes
 @mixin slit-out-vertical {
     @include keyframes (slit-out-vertical) {
         0% {
@@ -23,13 +24,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation slit-out-horizontal
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin slit-out-horizontal {
     @include keyframes (slit-out-horizontal) {
         0% {
@@ -49,13 +44,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation slit-out-diagonal-1
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin slit-out-diagonal-1 {
     @include keyframes (slit-out-diagonal-1) {
         0% {
@@ -75,13 +64,7 @@
     }
 }
 
-
-/**
- * ----------------------------------------
- * animation slit-out-diagonal-2
- * ----------------------------------------
- */
-
+/// @requires {mixin} keyframes
 @mixin slit-out-diagonal-2 {
     @include keyframes (slit-out-diagonal-2) {
         0% {
