--- a/src/core/styles/base/utilities/_bem.scss
+++ b/src/core/styles/base/utilities/_bem.scss
@@ -1,16 +1,26 @@
-//------------------------------------------------------------------------------
-// User-Overridable Configuration
+////
+/// @group bem
+/// @author <a href="https://github.com/runningskull" target="_blank">Juan Patten</a>
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
+
+/// @type String - The Element separator used. Default '__'.
 $bem--sep-elem: if(variable-exists(bem--sep-elem), $bem--sep-elem, '__');
+/// @type String - The Modifier separator used. Default '--'.
 $bem--sep-mod: if(variable-exists(bem--sep-mod), $bem--sep-mod, '--');
+/// @type String - The Modifier Value separator used. Default '-'.
 $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-');
-//------------------------------------------------------------------------------
-// Private Helpers
+
+/// Converts a passed selector value into plain string.
+/// @access private
+/// @param {String} $s - The selector to be converted.
+/// @returns {String}
 @function bem--selector-to-string($s) {
     @if $s == null {
         @return '';
     }
     //cast to string
-    $s: inspect($s); 
+    $s: inspect($s);
     @if str-index($s, '(') {
         // ruby sass => "(selector,)"
         @return str-slice($s, 2, -3);
@@ -20,11 +30,21 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     }
 }
 
+/// Prepends a dot to the passed BEM selector.
+/// @access private
+/// @param {String} $x - The BEM selector to prepend a dot to.
+/// @returns {String}
+/// @example scss - Returns
+///   .#{$x}
 @function bem--with-dot($x) {
     $first: str-slice($x, 0, 1);
     @return if($first=='.', $x, '.'+$x);
 }
 
+/// Converts a key-value map into a modifier string.
+/// @access private
+/// @param {List} $m - The modifier list to get converted.
+/// @returns {String}
 @function bem--mod-str($m) {
     @if type-of($m) == 'map' {
         $mm: nth($m, 1);
@@ -34,31 +54,65 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     }
 }
 
+/// Prefixes the block name to an element selector string,
+/// with the element separator string used as a divider.
+/// @access private
+/// @param {String} $b - The block name.
+/// @param {String} $e - The element name.
+/// @returns {String}
+/// @example scss - Returns
+///   .block__element
 @function bem--elem-str($b, $e) {
     @return $b + $bem--sep-elem + $e;
 }
 
+/// Returns a block selector string affixed by the modifier selector,
+/// followed by the element selector string.
+/// @access private
+/// @param {String} $block - The block name.
+/// @param {String} $elem - The sub-element name.
+/// @param {String} $mod - The modifier name.
+/// @returns {String}
+/// @example scss - Returns
+///   .block--modifier .block__element
 @function bem--bem-str($block, $elem, $mod) {
     $elem: if($elem, ' ' + $elem, '');
     @return ($block + $bem--sep-mod + bem--mod-str($mod) + $elem);
 }
 
+/// Checks if the element separator string is part of the passed string.
+/// @access private
+/// @param {String} $x - The string to check.
+/// @returns {number|null} Will return the index of the occurance,
+/// or null if the element separator name is not part of the passed string.
 @function bem--contains-elem($x) {
     // if you set the separators to common strings, this could fail
     @return str-index($x, $bem--sep-elem);
 }
 
+/// Checks if the modifier separator string is part of the passed string.
+/// @access private
+/// @param {String} $x - The string to check.
+/// @returns {number|null} Will return the index of the occurance,
+/// or null if the modifier separator string is not part of the passed string.
 @function bem--contains-mod($x) {
     // if you set the separators to common strings, this could fail
     @return str-index($x, $bem--sep-mod);
 }
 
+/// Checks if the passed selector string contains a colon.
+/// @access private
+/// @param {String} $x - The string to check for colons.
+/// @returns {number|null} Will return the index of the occurance,
+/// or null if the string does not contain any colons.
 @function bem--contains-pseudo($x) {
     @return str-index($x, ':');
 }
 
+/// Returns the BEM block-name that generated `$x`. Does not include leading ".".
+/// @access private
+/// @param {String} $x - The block name.
 @function bem--extract-block($x) {
-    // Returns the BEM block-name that generated $x. Does not include leading "."
     @if bem--contains-mod($x) {
         @return str-slice($x, 1, str-index($x, $bem--sep-mod)-1);
     } @else if bem--contains-elem($x) {
@@ -69,40 +123,34 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     @return $x;
 }
 
+/// Returns the first selector of a nested selector string.
+/// @access private
+/// @param {String} $x - The selector to search for.
+/// @returns {String}
 @function bem--extract-first-selector($x) {
-    // Returns the first selector of a nested selector string.
     $eow: str-index($x, ' ') or -1;
     @return str-slice($x, 1, $eow);
 }
 
-//------------------------------------------------------------------------------
-// Main Interface
+/// Generates a full BEM selector.
+/// @access public
+/// @param {String} $block - Required. A string block name.
+/// @param {String|List} $elem - Optional. A sub-element name. If `$mod` is not present, it is
+/// joined with $block. If $mod is present, it is nested under `$block--$mod`.
+/// @param {String|Map} $mod - Optional. A block modifier.
+/// @example scss Include a block
+///   @include bem-selector(block); // outputs .block
+/// @example scss Include a block and an element
+///   @include bem-selector(block, $e:elem); // outputs .block__elem
+/// @example scss Include block, element, and element modifier
+///   @include bem-selector(block, $e:(elem,emod); // outputs .block__elem-emod
+/// @example scss Include block and block modifier
+///   @include bem-selector(block, $m:mod) // outputs .block--mod
+/// @example scss Include block and modifier value
+///   @include bem-selector(block, $m:(mod:val)); // outputs .block--mod-val
+/// @example scss Include block modifier followed by block sub-element
+///   @include bem-selector(block, $m:mod, $e:elem); // outputs .block--mod .block__elem
 @function bem-selector($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
-    // Generates a full BEM selector.
-    //  - $block: Required. A string block name.
-    //  - $elem: Optional. A sub-element name. If $mod is not present, it is
-    //    joined with $block. If $mod is present, it is nested under $block--$mod
-    //    May be either:
-    //     - String: Simple element name. Results in `.block__elem`
-    //     - List: 2-length tuple like ($elem-name, $elem-mod)
-    //             Applies the element-modifier to the subelement. Multiple
-    //             elem-mods are not supported. Same type as '$mod'.
-    //  - $mod: Optional. A block modifier. May be either:
-    //     - String: Simple modifier string. Results in `.block--mod`
-    //     - Map: ($modifier-name: $modifier-value). Results in `.block--mod-val`
-    //
-    //  Examples:
-    //  
-    //  bem-selector(block)                   =>  .block
-    //
-    //  bem-selector(block, $e:elem)          =>  .block__elem
-    //  bem-selector(block, $e:(elem,emod)    =>  .block__elem--emod
-    //
-    //  bem-selector(block, $m:mod)           =>  .block--mod
-    //  bem-selector(block, $m:(mod:val))     =>  .block--mod-val
-    //  
-    //  bem-selector(block, $m:mod, $e:elem)  =>  .block--mod .block__elem
-    //
     $block: bem--with-dot($block);
     $elem: $e or $elem;
     // Return early if possible
@@ -135,9 +183,11 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     @return $bemcls;
 }
 
+/// Simply unrolls into a class-selector. The main purpose of using this mixin
+/// is to clearly denote the start of a BEM block.
+/// @access public
+/// @param {String} $block - The block name.
 @mixin bem-block($block) {
-    // Simply unrolls into a class-selector. Main purpose of using this mixin
-    // is to clearly denote the start of a BEM block.
     @at-root {
         #{bem-selector($block)} {
             @content;
@@ -145,12 +195,16 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     }
 }
 
+/// Unrolls into a proper BEM element selector, depending on the context.
+/// Inside just a block, yields a root-level `.block__elem`.
+/// Inside a mod or pseudo-selector, yields a nested `.block--mod .block__elem`.
+/// If $mod is included, it is appended to the block selector. Multiple
+/// $mods are not supported.
+/// @access public
+/// @param {String} $elem - The sub-element name.
+/// @param {String} $m - The modifier name.
+/// @param {String} $mod - An alias of `$m`.
 @mixin bem-elem($elem, $m: null, $mod: null) {
-    // Unrolls into a proper BEM element selector, depending on the context:
-    // Inside just a block, yields a root-level `.block__elem`
-    // Inside a mod or pseudo-selector, yields a nested `.block--mod .block__elem`
-    // If $mod is included, it is appended to the block selector. Multiple
-    // $mods are not supported.
     $this: bem--selector-to-string(&);
     @if $this == '' {
         @error 'Detected an Element that is not inside a Block: #{$elem}';
@@ -183,11 +237,13 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     }
 }
 
+/// Unrolls into a BEM block-modifier selector.
+/// This mixin does not generate element-modifiers, the bem-elem mixin instead.
+/// Nesting bem-mod inside a pseudo-selector is not supported, because what
+/// that should mean isn't clear.
+/// @access public
+/// @param {String} $mod - The modifier name.
 @mixin bem-mod($mod) {
-    // Unrolls into a BEM block-modifier selector.
-    // This mixin does not generate element-modifiers. Use bem-elem(elem, $mod:mod).
-    // Nesting bem-mod inside a pseudo-selector is not supported, because what
-    // that should mean isn't clear.
     $skip: false;
     $this: bem--selector-to-string(&);
     @if $this == '' {
@@ -206,52 +262,51 @@ $bem--sep-mod-val: if(variable-exists(bem--sep-mod-val), $bem--sep-mod-val, '-')
     }
 }
 
+/// @alias bem-selector
 @mixin bem($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
     #{bem-selector($block, $e: $e, $elem: $elem, $m: $m, $mod: $mod, $mods: $mods)} {
         @content;
     }
 }
 
-//------------------------------------------------------------------------------
-// Aliases
-@mixin b($block) {
-    @include bem-block($block) {
-        @content;
-    }
-}
-
-@mixin e($elem, $m: null, $mod: null) {
-    @include bem-elem($elem, $m: $m, $mod: $mod) {
-        @content;
-    }
-}
-
-@mixin m($mod) {
-    @include bem-mod($mod) {
-        @content;
-    }
-}
-
+/// @alias bem-block
 @mixin block($block) {
     @include bem-block($block) {
         @content;
     }
 }
 
+/// @alias bem-elem
 @mixin elem($elem, $m: null, $mod: null) {
     @include bem-elem($elem, $m: $m, $mod: $mod) {
         @content;
     }
 }
 
+/// @alias bem-mod
 @mixin mod($mod) {
     @include bem-mod($mod) {
         @content;
     }
 }
 
-@mixin bem($block, $e: null, $elem: null, $m: null, $mod: null, $mods: null) {
-    @include bem($block, $e: $e, $elem: $elem, $m: $m, $mod: $mod, $mods: $mods) {
+/// @alias bem-block
+@mixin b($block) {
+    @include bem-block($block) {
+        @content;
+    }
+}
+
+/// @alias bem-elem
+@mixin e($elem, $m: null, $mod: null) {
+    @include bem-elem($elem, $m: $m, $mod: $mod) {
+        @content;
+    }
+}
+
+/// @alias bem-mod
+@mixin m($mod) {
+    @include bem-mod($mod) {
         @content;
     }
 }
