--- a/src/core/styles/base/utilities/_functions.scss
+++ b/src/core/styles/base/utilities/_functions.scss
@@ -1,7 +1,12 @@
-// Pixels to Relative Values
-// @access public
-// @param {number|string} $pixels - Size in pixels
-// @param {number|string} $context - Size in pixels
+////
+/// @group Utilities
+/// @author [Simeon Simeonoff](ssimeonov@infragistics.com)
+////
+
+/// Converts pixels to relative values (em).
+/// @access public
+/// @param {number|string} $pixels - The pixel value to be converted.
+/// @param {number|string} $context [$browser-context] - The base context to convert against.
 @function em($pixels, $context: $browser-context) {
     @if (unitless($pixels)) {
         $pixels: $pixels * 1px;
@@ -12,6 +17,10 @@
     @return ($pixels / $context) * 1em;
 }
 
+/// Pixels to root relative values (rem).
+/// @access public
+/// @param {number|string} $pixels - The pixel value to be converted.
+/// @param {number|string} $context [$browser-context] - The base context to convert against.
 @function rem($pixels, $context: $browser-context) {
     @if (unitless($pixels)) {
         $pixels: $pixels * 1px;
@@ -22,6 +31,11 @@
     @return ($pixels / $context) * 1rem;
 }
 
+/// Generates a color shade from base color and saturation level.
+/// @access private
+/// @group Palettes
+/// @param {Color} $color - The base color to be used to generate a color shade.
+/// @param {number|string} $saturation - The saturation level used to create the color shade.
 @function gen-color($color, $saturation) {
     @if ($saturation == 50) {
         @return lighten(saturate($color, 10.4), 37.7);
@@ -52,10 +66,13 @@
     }
 }
 
-// Retrieve color from an igx palette map
-// @access public
-// @param {Map} $palette - Source palette map
-// @param {string} $saturation - Target color from palette
+/// Retrieves a color from a color palette.
+/// @access public
+/// @group Palettes
+/// @param {Map} $palette - The source palette map.
+/// @param {string} $color - The target color from the color palette.
+/// @param {number|string} $variant - The target color shade from the color palette.
+/// @returns {Color} [#fff] - Returns white if now palette, color and/or variant matches found.
 @function igx-color($palette, $color, $variant: 500) {
     @if map-exists($palette) and map-key-exists($palette, $color) and map-key-exists($color, $variant) {
         @return map-get(map-get($palette, $color), $variant);
@@ -63,10 +80,13 @@
     @return #fff;
 }
 
-// Retrieve a contrast color for text from an igx palette map
-// @access public
-// @param {Map} $palette - Source palette map
-// @param {string} $saturation - Target color from palette
+/// Retrieves a contrast text color for a given color from a color palette.
+/// @access public
+/// @group Palettes
+/// @param {Map} $palette - The source palette map.
+/// @param {string} $color - The target color from the color palette.
+/// @param {number|variant} $variant - The target color shade from the color palette.
+/// @returns {Color} [#fff] - Returns white if now palette, color and/or variant matches found.
 @function igx-contrast-color($palette, $color, $variant: 500) {
     @if map-exists($palette) and map-key-exists($palette, $color) and map-key-exists($color, $variant) {
         @return map-get(map-get(map-get($palette, $color), 'contrast'), $variant);
@@ -74,11 +94,13 @@
     @return #fff;
 }
 
-// Set text color based on background color
-// @access public
-// @param {String} $n - Background color
-@function text-contrast($n) {
-    $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
+/// Returns a contrast color for a passed color.
+/// @access public
+/// @group Palettes
+/// @param {Color} $color - The color used to return a contrast color for.
+/// @returns {Color} - Returns either white or black depending on the brightness of the input color.
+@function text-contrast($color) {
+    $color-brightness: round((red($color) * 299) + (green($color) * 587) + (blue($color) * 114) / 1000);
     $light-color: round((red(#fff) * 299) + (green(#fff) * 587) + (blue(#fff) * 114) / 1000);
     @if abs($color-brightness) < ($light-color / 2) {
         @return #fff;
@@ -87,29 +109,36 @@
     }
 }
 
-// Test if `$value` is a valid direction
-// @param {*} $value - Value to test
-// @return {Bool}
+/// Test if `$value` is a valid direction.
+/// @access private
+/// @param {*} $value - The value to test.
+/// @return {Bool}
 @function is-direction($value) {
     $is-keyword: index( ( to top, to top right, to right top, to right, to bottom right, to right bottom, to bottom, to bottom left, to left bottom, to left, to left top, to top left), $value);
     $is-angle: type-of($value)=='number' and index('deg' 'grad' 'turn' 'rad', unit($value));
     @return $is-keyword or $is-angle;
 }
 
-@function is-component($components, $excludes) {
-    @each $item in $excludes {
-        @if not(index($components, $item)) {
-            @error unquote('Can\'t exclude "#{$item}" because it is not in the list of Ignite UI for Angular components.');
+/// Test if a component, or list of components
+/// is in the list of known components.
+/// @access private
+/// @param {String|List} $excludes - The components list to check in.
+/// @return {List}
+@function is-component($items) {
+    $register: map-keys($components);
+    @each $item in $items {
+        @if not(index($register, $item)) {
+            @error unquote('Can\'t exclude "#{$item}" because it is not in the list of known components.');
         }
     }
-
-    @if length($excludes) > 0 {
-        @warn unquote('You have excluded the following components from the theme: "#{$excludes}". You can now add your own themes for the excluded components.');
-    }
-
-    @return '';
+    @return $items;
 }
 
+/// Converts numbers to HEX value strings.
+/// @access private
+/// @param {number} $num - The number to convert.
+/// @param {radix} $radix - The base radix to use for the conversion.
+/// @return {String}
 @function to-string($num, $radix: 16) {
     $chars: '0123456789abcdef';
     $result: '';
@@ -130,6 +159,11 @@
     @return $sign + $result;
 }
 
+/// Converts a rgba color to a hexidecimal color.
+/// @access public
+/// @requires {function} to-string
+/// @param {Color} $rgba - The rgba color to convert.
+/// @return {Color}
 @function hexrgba($rgba) {
     $red: red($rgba);
     $green: green($rgba);
@@ -141,27 +175,35 @@
     @return unquote('##{str-slice('0#{to-string($r)}',-2)}#{str-slice('0#{to-string($g)}',-2)}#{str-slice('0#{to-string($b)}',-2)}');
 }
 
-@function extend($obj, $extend) {
+/// Extends a Map object with the properties of another Map object.
+/// @access private
+/// @param {Map} $map1 - The source map to get extended.
+/// @param {Map} $map2 - The map extending the source map.
+/// @returns {Map} - Returns the original map extended with the properties of the second map.
+@function extend($map1, $map2) {
     $result: ();
-
-    @each $key, $value in $extend {
+    @each $key, $value in $map2 {
         @if not($value) {
             $result: map-merge($result, (
-                #{$key}: map-get($obj, $key)
+                #{$key}: map-get($map1, $key)
             ));
         } @else {
             $result: map-merge($result, (
                 #{$key}: $value
-            ))
+            ));
         }
     }
-
-    $result: map-merge($obj, $result);
-
+    $result: map-merge($map1, $result);
     @return $result;
 }
 
-@function _generate-palette($color) {
+/// Generates a Material-like color palette for a single color.
+/// @access private
+/// @group Palettes
+/// @requires {function} gen-color
+/// @param {Color} $color - The base color used to generate the palette.
+/// @returns {Map} - A map consisting of 26 color variations.
+@function generate-palette($color) {
     @return (
         100: gen-color($color, 100),
         200: gen-color($color, 200),
@@ -194,6 +236,18 @@
     );
 }
 
+/// Generates a color palette.
+/// @access public
+/// @group Palettes
+/// @requires {function} generate-palette
+/// @param {Color} $primary - The primary color used to generate the primary color palette.
+/// @param {Color} $secondary - The secondary color used to generate the secondary color palette.
+/// @param {Color} $info [#1377d5] - The information color used throughout the application.
+/// @param {Color} $success [#4eb862] - The success color used throughout the application.
+/// @param {Color} $warn [#fbb13c] - The warning color used throughout the application.
+/// @param {Color} $error [#ff134a] - The error color used throughout the application.
+/// @returns {Map} - A map consisting of 74 color variations, including the `primary`, `secondary`, `grays`,
+/// `info`, `success`, `warn`, and `error` colors.
 @function igx-palette(
     $primary,
     $secondary,
@@ -202,8 +256,8 @@
     $warn: #fbb13c,
     $error: #ff134a
 ) {
-    $primary-palette: _generate-palette($primary);
-    $secondary-palette: _generate-palette($secondary);
+    $primary-palette: generate-palette($primary);
+    $secondary-palette: generate-palette($secondary);
 
     // @debug 'Primary Colors Palette: #{$primary-palette}';
     // @debug 'secondary Colors Palette: #{$secondary-palette}';
@@ -239,13 +293,4 @@
             )
         )
     );
-}
-
-@function register-component($components, $component) {
-
-    @if not(index($components, $component)) {
-        @return join($components, $component);
-    }
-
-    @return $components;
 }
