--- a/src/core/styles/components/badge/_badge-component.scss
+++ b/src/core/styles/components/badge/_badge-component.scss
@@ -1,4 +1,14 @@
+//// Badge
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-badge) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %igx-badge-display !optional;
 
     @include e(circle) {
