--- a/src/core/styles/components/button-group/_button-group-component.scss
+++ b/src/core/styles/components/button-group/_button-group-component.scss
@@ -1,4 +1,13 @@
+//// Button Group
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-button-group) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
 
     @extend %igx-bgroup-display !optional;
 
