--- a/src/core/styles/components/calendar/_calendar-component.scss
+++ b/src/core/styles/components/calendar/_calendar-component.scss
@@ -1,8 +1,18 @@
+//// Calendar
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 igx-calendar {
     width: 100%;
 }
 
 @include b(igx-calendar) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %cal-display !optional;
 
     @include e(header) {
