--- a/src/core/styles/components/card/_card-component.scss
+++ b/src/core/styles/components/card/_card-component.scss
@@ -1,4 +1,14 @@
+//// Card
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-card) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %igx-card-display !optional;
 
     igx-card-header {
