--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -1,4 +1,13 @@
+//// Navdrawer
+/// @group components
+/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(igx-nav-drawer) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
 
     @extend %animation !optional;
 
