--- a/src/core/styles/components/ripple/_ripple-component.scss
+++ b/src/core/styles/components/ripple/_ripple-component.scss
@@ -1,4 +1,14 @@
+//// Ripple
+/// @group components
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @requires {mixin} bem-block
+/// @requires {mixin} bem-elem
+/// @requires {mixin} bem-mod
+////
 @include b(ig-ripple-host) {
+    $this: bem--selector-to-string(&);
+    @include register-component(str-slice($this, 2, -1));
+
     @extend %igx-ripple-wrapper !optional;
 
     @include e(ripple) {
