--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -1,3 +1,8 @@
+////
+/// @group themes
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
+
 // Anything imported here shoulnd't affect
 // theme configuration
 @import '../base/index';
@@ -35,6 +40,8 @@
 @import '../components/tabbar/tabbar-component';
 @import '../components/toast/toast-component';
 
+/// Includes the base for each theme.
+/// Currently it only includes typography.
 @mixin igx-core() {
     @include igx-typography($config: ('font-family': 'Titillium Web'));
 }
