--- a/src/core/styles/themes/_index.scss
+++ b/src/core/styles/themes/_index.scss
@@ -1,3 +1,8 @@
+////
+/// @group themes
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
+
 // Import the core modules first
 @import 'core';
 
@@ -29,12 +34,25 @@
 @import '../components/icon/icon-theme';
 @import '../components/grid-filtering/grid-filtering-theme';
 
+/// Generates an Ignite UI for Angular global theme.
+/// @param {Map} $palette [$default-palette] - An igx-palette to be used by the global theme.
+/// @param {List} $exclude - A list of igx components to be excluded from the global theme styles.
+/// @requires {function} is-component
+/// @requires {variable} $components
 @mixin igx-theme($palette: $default-palette, $exclude: ()) {
-    // Check for invalid components passed
-    // in the exclude list
-    $valid-components: is-component($components, $exclude);
+    // Stores all excluded component styles
+    $excluded: ();
+
+    @if length($exclude) > 0 {
+        $excluded: is-component($exclude);
+    }
+
+    @if length($excluded) > 0 {
+        @warn unquote('You have excluded the following components from the theme: "#{$excluded}". You can now add your own themes for the excluded components.');
+    }
 
     // @debug 'All registered: #{$components}';
+    // @debug 'All excluded: #{$excluded}';
 
     @if not(index($exclude, 'igx-avatar')) {
         @include igx-avatar($theme: (), $palette: $palette);
