--- a/src/core/styles/typography/_typography.scss
+++ b/src/core/styles/typography/_typography.scss
@@ -1,3 +1,13 @@
+////
+/// @group typography
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+////
+
+
+/// Defines the typography used in
+/// the application.
+/// @param {Map} $config
 @mixin igx-typography($config) {
     $font-family: map-get($config, 'font-family');
     $font-weight: 400;
